--- a/privacy.css
+++ b/privacy.css
@@ -318,3 +318,158 @@ line-height: 18px;
     padding:1% 0%;
   
 }
+
+
+
+/* Media query for mobile devices */
+@media (max-width: 768px) {
+    .nav-links {
+        display: none;
+        flex-direction: column;
+        width: 100%;
+        background-color: #333;
+    }
+
+    .nav-links.active {
+        display: flex;
+    }
+
+    .menu-toggle {
+        display: block;
+    }
+}
+
+
+
+
+
+
+
+@media (max-width:400px){
+    .menu-toggle {
+        display: block;
+    position:absolute;
+    left: 280px;
+    top: 33px;
+    }
+    .logo{
+        position:absolute;
+        top:20px;
+    }
+
+    
+    .nav-links.active {
+        display: flex;
+       margin-top:40%;  
+    }
+    
+    .nav-links {
+        display: none;
+        flex-direction: column;
+        align-items: center;
+        justify-content:space-evenly;
+        width: 100%;
+        height: 300px;
+        background:black;
+        padding: 0%;
+        margin-top: 10%;
+    }
+ 
+    .nav-links li a{
+        width:100%;
+        height:50px;
+        color:white;
+        flex-direction: column;
+        
+    }
+
+    #side-logo {
+       display: none;
+    }
+
+
+
+    .group-strait{
+        width: 100%;
+        height:auto;
+        padding: 0% 8%; 
+    
+    }
+    .group-strait h2{
+         font-size: 22px;
+         text-align: center;
+           }
+           .group-strait h2 span{
+             font-size: 22px; 
+           }
+           .group-strait img{
+            width:70px;
+            height: 20px;
+           }
+
+           main {
+            padding:3% 10%;
+    
+          }
+
+    footer{
+        width: 100%;
+        height:700px;
+       margin-top: -10%;
+      
+    }
+    .up{
+        width: 100%;
+        height: 650px;
+    
+    }
+    .min-up{
+        width: 100%;
+        height: 700px;
+     flex-direction: column;
+     justify-content: center;
+    
+    }
+    .soc{
+    
+        width:100%;
+        height: 150px;
+        padding:9% 0%;
+        padding-left: 23.5%;
+    }
+    .soc-img{
+        display: flex;
+        justify-content:center;
+        gap: 20px;
+    }
+    .log{
+        width:100%;
+        display: flex;
+        justify-content: center;
+    }
+    .cen h3{
+    text-align: center;
+    }
+    .cen p{
+    text-align: center;
+    }
+    .cen p a{
+        color: #FFF;
+    }
+    .pol{
+    
+        width:100%;
+        height:150px;
+       
+    }
+    .dow{
+    width: 100%;
+    padding-left: 23.5%;
+      
+    }
+    .soc-img1{
+        display: flex;
+        justify-content:center;
+        gap: 20px;
+    }
+}
