--- a/style.css
+++ b/style.css
@@ -283,15 +283,12 @@ margin-left:-10px;
      
  }
 .background {
-   width: 100%;
-   height: 600px;
-    position: relative;
-    padding: 130px 0;
-   
-    background: url("coming_soon.png");
+    width: 100%;
+height: 600px;
+background: url("coming_soon.png");
 background-size:cover;
 background-position: center;
-
+padding-top: 10%;
    
 }
 
@@ -2050,10 +2047,7 @@ line-height: 18px;
     }
     
 #two {
-    
-
     height:1200px;
-    
 }
 
 #big-div {
@@ -2067,13 +2061,15 @@ line-height: 18px;
   
 }   
 
+
 .second-div {
 
     width: 100%;
     height: 800px;
     padding-left: 0%;
-
 }
+
+
 #h2 {
 
     font-size: 18px;
@@ -2082,6 +2078,7 @@ line-height: 18px;
 
     font-size:30px;
 
+    
 }
 
 #p {
