--- a/terms.css
+++ b/terms.css
@@ -9,107 +9,108 @@ body {
   }
   
   
+ 
   .navbar {
-      width: 100%;
-      height: 120px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      background-color: transparent;
-      color: white;
-  
-      padding: 1.5% 8%;
-  
-  }
-  
-  .logo {
-      width: 250px;
-      display: flex;
-      justify-content: space-evenly;
-      align-items: center;
-      
-  
-  }
-  
-  .logo img {
-      width: 80px;
-      height: 80px;
-      margin-bottom: 4%;
-  }
-  
-  .logo p {
-      width: 200px;
-      color: #911B1B;
-      font-family: Lato;
-      font-size: 26px;
-      font-weight: 600;
-      line-height: 32px;
-      text-align: right;
-      text-underline-position: from-font;
-      text-decoration-skip-ink: none;
-      margin-top:20px;
-  
-  
-  }
-  
-  .nav-links {
-      list-style: none;
-      display: flex;
-      gap: 15px;
-   
+    width: 100%;
+    height: 120px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: transparent;
+    color: white;
+
+    padding: 1.5% 8%;
+
+}
+
+.logo {
+    width: 250px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
     
-  }
+
+}
+
+.logo img {
+    width: 80px;
+    height: 80px;
+    margin-bottom: 4%;
+}
+
+.logo p {
+    width: 200px;
+    color: #911B1B;
+    font-family: Lato;
+    font-size: 26px;
+    font-weight: 600;
+    line-height: 32px;
+    text-align: right;
+    text-underline-position: from-font;
+    text-decoration-skip-ink: none;
+    margin-top: 20px;
+
+
+}
+
+.nav-links {
+    list-style: none;
+    display: flex;
+    gap: 15px;
+ 
   
-  .nav-links li a {
-      color: white;
-      text-decoration: none;
-      font-family: Lato;
-      font-size: 18px;
-      font-weight: 400;
-      line-height: 24px;
-  
-      text-underline-position: from-font;
-      text-decoration-skip-ink: none;
-  
-      padding: 8px 12px;
+}
+
+.nav-links li a {
+    color: white;
+    text-decoration: none;
+    font-family: Lato;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 24px;
+
+    text-underline-position: from-font;
+    text-decoration-skip-ink: none;
+
+    padding: 8px 12px;
+ 
+    transition: background-color 0.3s;
    
-      transition: background-color 0.3s;
-     
-  }
-  
-  .nav-act.active{
-      color: #911B1B; 
-      border-bottom: 2px solid #911B1B;
-  }
-  
-  
-  
-  
-  
-  
-  
-  
-  /* Hide menu for smaller screens */
-  .menu-toggle {
-  
-      display: none;
-      background: none;
-      color: white;
-      border: none;
-      font-size: 28px;
-      cursor: pointer;
-  
-      
-  }
-  
-  
-  #side-logo {
-      width: 200px;
-      display: flex;
-      justify-content: space-around;
-      align-items: center;
-      margin-bottom: 2%;
-  }
+}
+
+.nav-act.active{
+    color: #911B1B; 
+    border-bottom: 2px solid #911B1B;
+}
+
+
+
+
+
+
+
+
+/* Hide menu for smaller screens */
+.menu-toggle {
+
+    display: none;
+    background: none;
+    color: white;
+    border: none;
+    font-size: 28px;
+    cursor: pointer;
+
+    
+}
+
+
+#side-logo {
+    width: 200px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin-bottom: 2%;
+}
   
   header {
     
@@ -329,4 +330,170 @@ line-height: 18px;
     height: 170px;
     padding:1% 0%;
   
+}
+
+
+
+
+
+@media (max-width: 768px) {
+    .nav-links {
+        
+        display: none;
+        flex-direction: column;
+        display: none;
+        flex-direction: column;
+        align-items: center;
+        justify-content:space-evenly;
+        width: 100%;
+        background:maroon;
+        top: 100px; /* Prevent shifting */
+        left: 0;
+        z-index: 999;
+
+    }
+
+    .nav-links.active {
+        display: flex;
+       
+    }   
+
+  .menu-toggle {
+    display: block;
+   position: relative;
+    top: 20px;
+    right: 20px;
+    z-index: 1000;
+    background: none;
+    color: white;
+    border: none;
+    font-size: 28px;
+    cursor: pointer;
+   margin: 0;
+}
+
+    #side-logo {
+        display: none;   
+     }
+}
+
+
+@media (max-width:400px){
+    .menu-toggle {
+        display: block;
+    position:absolute;
+    left: 280px;
+    top: 33px;
+    }
+    .logo{
+        position:absolute;
+        top:20px;
+    }
+
+    
+    .nav-links.active {
+        display: flex;
+       margin-top:40%;  
+    }
+    
+    .nav-links {
+        display: none;
+        flex-direction: column;
+        align-items: center;
+        justify-content:space-evenly;
+        width: 100%;
+        height: 300px;
+        background:black;
+        padding: 0%;
+        margin-top: 10%;
+    }
+ 
+    .nav-links li a{
+        width:100%;
+        height:50px;
+        color:white;
+        flex-direction: column;
+        
+    }
+
+    #side-logo {
+       display: none;
+    }
+
+    .group-strait{
+        width: 100%;
+        height:auto;
+        padding: 0% 8%; 
+    
+    }
+    .group-strait h2{
+         font-size: 24px;
+         text-align: center;
+           }
+           .group-strait h2 span{
+             font-size: 24px; 
+           }
+           .group-strait img{
+            width:100px;
+           }
+    footer{
+        width: 100%;
+        height:700px;
+       margin-top: -10%;
+      
+    }
+    .up{
+        width: 100%;
+        height: 650px;
+    
+    }
+    .min-up{
+        width: 100%;
+        height: 700px;
+     flex-direction: column;
+     justify-content: center;
+    
+    }
+    .soc{
+    
+        width:100%;
+        height: 150px;
+        padding:9% 0%;
+        padding-left: 23.5%;
+    }
+    .soc-img{
+        display: flex;
+        justify-content:center;
+        gap: 20px;
+    }
+    .log{
+        width:100%;
+        display: flex;
+        justify-content: center;
+    }
+    .cen h3{
+    text-align: center;
+    }
+    .cen p{
+    text-align: center;
+    }
+    .cen p a{
+        color: #FFF;
+    }
+    .pol{
+    
+        width:100%;
+        height:150px;
+       
+    }
+    .dow{
+    width: 100%;
+    padding-left: 23.5%;
+      
+    }
+    .soc-img1{
+        display: flex;
+        justify-content:center;
+        gap: 20px;
+    }
 }
