--- a/about.css
+++ b/about.css
@@ -539,22 +539,525 @@ line-height: 18px;
     padding:1% 0%;
   
 }
-
-/* Media query for mobile devices */
-@media (max-width: 768px) {
-    .nav-links {
-        display: none;
-        flex-direction: column;
-        width: 100%;
-        background-color: #333;
-    }
-
-    .nav-links.active {
-        display: flex;
-    }
+@media(max-width:1300px){
 
     .menu-toggle {
         display: block;
+    position:absolute;
+    left:88%;
+    top: 30px;
+    }
+    .logo{
+        position:absolute;
+        top:20px;
+    }
+
+    #side-logo {
+        display: none;
+     }
+    
+    .nav-links.active {
+        display: flex;
+       margin-top:20%;  
+    }
+    .nav-links {
+        display: none;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        height: 300px;
+        background:black;
+        padding: 0%;
+        margin-top: 10%;
+        
+    }
+ 
+    .nav-links li a{
+        width:100%;
+        height: 50px;
+        color:white;
+
+    }
+
+
+    
+    .hero-image{
+        width: 100%;
+        height:400px;
+
+    }
+    .img-text {
+        width: 100%;
+        height: 400px;
+        display: flex;
+        justify-content: center;
+        align-items:end;
+        padding: 0% 8%;
+    }
+    .img-text img {
+        width: 20px;
+        height: 20px;
+   margin-bottom: 2.5%;
+       
+    }  
+ 
+
+    
+    .img-text p {
+    font-size:14px;     
+    }
+
+    .gallery2{
+        width: 100%;
+        height: auto;
+    padding-top: 20%;
+       
+        
+    }
+    .one-big{
+        height: 1100px;
+      
+       }
+
+       .one-small{
+        height:400px;  
+        width: 100%;
+       
+        
+
+       }
+       .both{
+        width: 85%;
+       height: auto;
+       flex-direction: column;
+      
+       
+       }
+       .two-small{
+        height:300px; 
+        width: 100%;
+       
+       
+       }
+       .min-card{
+        width:100%;
+         height:200px;
+        margin-bottom: 50%;
+       
+        
+           }
+           #w-h{
+            height: 600px;
+            padding-bottom: 40%;
+            }
+           #m-g-t{
+          padding-top: 80%;
+          height:250px;
+            }
+           .min-card h1{
+            font-size:20px;
+            line-height:25px;
+           }
+           .min-card p{
+            font-size: 12px;
+            line-height:20px ;
+           }
+
+           .m-card{
+            width:100%;
+            height:200px;
+            margin-left:0%;
+            margin-top: -70%;
+           }
+           .m-card h1{
+            line-height:25px;
+        font-size:20px;
+        
+           }
+           .m-card p{
+        font-size: 12px;
+        line-height:20px;
+           }
+           .box2{
+            width: 100%;
+            height: 250px;
+          margin-top: -35%;
+           
+        
+           }
+           .box3{
+            width: 100%;
+            height: 250px;
+           margin-top: -15%;
+            
+           }
+           .box1{
+            width: 100%;
+            height:200px;
+           padding-bottom: 20%;
+         
+        
+           }
+           .box4{
+            width: 100%;
+            height:200px;
+            padding-top: 50%;
+           }
+           .box8{
+            width: 100%;
+            height: 250px;
+            margin-top: -30%;
+           }  
+              .box9{
+            width: 100%;
+            height: 250px;
+           }   
+             .box10{
+            width: 100%;
+            height:250px;
+           }
+
+           .log-karke{
+            width: 100%;
+            height: 800px;
+           }
+           .sec-log{
+            width: 85%;
+            height:800px;
+            flex-direction: column;
+           }
+           .log-pera{
+            width:100%;
+            height: 400px;
+           }
+           .log-img{
+            width: 100%;
+            height: 300px;
+           }
+           .log-img img{
+            width:200px;
+            height: 200px;
+           }
+
+
+
+
+
+    
+    .min-up{
+        width: 95%;
+    }
+    .log{
+
+        width: 25%;
+        
+    }
+    .pol{
+        width: 25%;
+
+    }
+    .cen p{
+     
+        padding:0%;
+    }
+    .soc{
+        width: 25%;
+    }
+    .dow{
+        width: 25%;
+    }
+
+}
+
+@media(max-width:880px){
+    .m-card{
+       padding-top:60%;
+    }
+}
+
+/* Media query for mobile devices */
+@media (max-width: 768px) {
+    .menu-toggle {
+        display: block;
+    position:absolute;
+    left:88%;
+    top: 30px;
+    }
+    .logo{
+        position:absolute;
+        top:20px;
+    }
+
+    #side-logo {
+        display: none;
+     }
+    
+    .nav-links.active {
+        display: flex;
+       margin-top:20%;  
+    }
+    .nav-links {
+        display: none;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        height: 300px;
+        background:black;
+        padding: 0%;
+        margin-top: 10%;
+        
+    }
+ 
+    .nav-links li a{
+        width:100%;
+        height: 50px;
+        color:white;
+
+    }
+
+    .hero-image{
+        width: 100%;
+        height:400px;
+
+    }
+    .img-text {
+        width: 100%;
+        height: 400px;
+        display: flex;
+        justify-content: center;
+        align-items:end;
+        padding: 0% 8%;
+    }
+    .img-text img {
+        width: 20px;
+        height: 20px;
+   margin-bottom: 5%;
+       
+    }  
+ 
+
+    
+    .img-text p {
+    font-size:20px;     
+    }
+
+    .gallery2{
+        width: 100%;
+        height: auto;
+    padding-top: 20%;
+       
+        
+    }
+    .one-big{
+        height: 1100px;
+      
+       }
+
+       .one-small{
+        height:400px;  
+        width: 100%;
+       
+        
+
+       }
+       .both{
+        width: 85%;
+       height: auto;
+       flex-direction: column;
+      
+       
+       }
+       .two-small{
+        height:300px; 
+        width: 100%;
+       
+       
+       }
+       .min-card{
+        width:100%;
+         height:200px;
+        margin-bottom: 50%;
+       
+        
+           }
+           #w-h{
+            height: 600px;
+            padding-bottom: 40%;
+            }
+           #m-g-t{
+          padding-top: 80%;
+          height:250px;
+            }
+           .min-card h1{
+            font-size:20px;
+            line-height:25px;
+           }
+           .min-card p{
+            font-size: 12px;
+            line-height:20px ;
+           }
+
+           .m-card{
+            width:100%;
+            height:200px;
+            margin-left:0%;
+            margin-top: -50%;
+           }
+           .m-card h1{
+            line-height:25px;
+        font-size:20px;
+        
+           }
+           .m-card p{
+        font-size: 12px;
+        line-height:20px;
+           }
+           .box2{
+            width: 100%;
+            height: 250px;
+          margin-top: -35%;
+           
+        
+           }
+           .box3{
+            width: 100%;
+            height: 250px;
+           margin-top: -15%;
+            
+           }
+           .box1{
+            width: 100%;
+            height:200px;
+           padding-bottom: 20%;
+         
+        
+           }
+           .box4{
+            width: 100%;
+            height:200px;
+            padding-top: 50%;
+           }
+           .box8{
+            width: 100%;
+            height: 250px;
+            margin-top: -30%;
+           }  
+              .box9{
+            width: 100%;
+            height: 250px;
+           }   
+             .box10{
+            width: 100%;
+            height:250px;
+           }
+
+           .log-karke{
+            width: 100%;
+            height: 800px;
+           }
+           .sec-log{
+            width: 85%;
+            height:800px;
+            flex-direction: column;
+           }
+           .log-pera{
+            width:100%;
+            height: 400px;
+           }
+           .log-img{
+            width: 100%;
+            height: 300px;
+           }
+           .log-img img{
+            width:200px;
+            height: 200px;
+           }
+
+           footer{
+            width: 100%;
+            height:700px;
+           margin-top: -10%;
+          
+        }
+        .up{
+            width: 100%;
+            height: 650px;
+        
+        }
+        .min-up{
+            width: 100%;
+            height: 700px;
+         flex-direction: column;
+         justify-content: center;
+        
+        }
+        .soc{
+        
+            width:100%;
+            height: 150px;
+            padding:9% 0%;
+            padding-left: 23.5%;
+        }
+        .soc-img{
+            display: flex;
+            justify-content:center;
+            gap: 20px;
+        }
+        .log{
+            width:100%;
+            display: flex;
+            justify-content: center;
+        }
+        .cen h3{
+        text-align: center;
+        }
+        .cen p{
+        text-align: center;
+        }
+        .pol{
+        
+            width:100%;
+            height:150px;
+           
+        }
+        .dow{
+        width: 100%;
+        padding-left: 23.5%;
+          
+        }
+        .soc-img1{
+            display: flex;
+            justify-content:center;
+            gap: 20px;
+        }
+          
+}
+
+@media(max-width:645px){
+    .m-card{
+      padding-top: 50%;
+    }
+}
+@media(max-width:620px){
+    .m-card{
+       padding-top:60%;
+    }
+}
+@media(max-width:650px){
+    .m-card{
+       padding-top:70%;
+    }
+}
+@media(max-width:500px){
+    .m-card{
+       padding-top:100%;
+    }
+}
+@media(max-width:430px){
+    .m-card{
+       padding-top:120%;
     }
 }
 
@@ -657,6 +1160,7 @@ line-height: 18px;
        height: auto;
        flex-direction: column;
        
+       
        }
        .two-small{
         height:600px; 
@@ -672,7 +1176,7 @@ line-height: 18px;
             height: 600px;
             }
            #m-g-t{
-          padding-top: 50%;
+          padding-top: 100%;
           height:250px;
             }
            .min-card h1{
