--- a/contact.css
+++ b/contact.css
@@ -1,16 +1,13 @@
 body {
- 
     list-style: none;
     text-decoration: none; 
-background: black;
+    background: black;
 }
 
 *{
     margin: 0;
-    padding: 0;
+    padding: 0;  
 }
-
-
 
 .navbar {
     width: 100%;
@@ -18,9 +15,9 @@ background: black;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: transparent;
+    
     color: white;
-
+ 
     padding: 1.5% 8%;
 
 }
@@ -273,6 +270,8 @@ footer{
     height: 250px;
     margin-top: 17%;
     padding: 0% 3%;
+    
+    
   
 }
 .up{
@@ -397,98 +396,306 @@ line-height: 18px;
   
 }
 
+@media(max-width:1300px){
+   
 
-@media (max-width: 768px) {
-    .nav-links {
-        
-        display: none;
-        flex-direction: column;
-        display: none;
-        flex-direction: column;
-        align-items: center;
-        justify-content:space-evenly;
-        width: 100%;
-        background:maroon;
-        top: 100px; /* Prevent shifting */
-        left: 0;
-        z-index: 999;
-
+    .menu-toggle {
+        width: 100px;
+        display: block;
+    position:absolute;
+    left:75%;
+    top:-15px;
+    font-weight: 300;
     }
-
-    .nav-links.active {
-        display: flex;
-       
-    }   
-
-  .menu-toggle {
-    display: block;
-   position: relative;
-    top: 20px;
-    right: 20px;
-    z-index: 1000;
-    background: none;
-    color: white;
-    border: none;
-    font-size: 28px;
-    cursor: pointer;
-   margin: 0;
-}
-
-    #side-logo {
-        display: none;   
-     }
-}
-
-
-@media (max-width:400px) {
-
     .logo{
         position:absolute;
         top:20px;
     }
 
-    .nav-links {
+    #side-logo {
         display: none;
-        flex-direction: column;
+     }
+    
+    .nav-links.active {
+        display: flex;
+       margin-top:20%;
+
+    }
+    .nav-links {
+       
         display: none;
         flex-direction: column;
         align-items: center;
-        justify-content:space-evenly;
+        justify-content: center;
         width: 100%;
         height: 300px;
         background:black;
-        top: 100px; /* Prevent shifting */
-        left: 0;
-        z-index: 999;
+        padding: 0%;
+        margin-top: 10%;
+        
+    }
+ 
+    .nav-links li a{
+        width:100%;
+        height: 50px;
+        color:white;
 
     }
 
-    .nav-links.active {
-        display: flex;
-        margin-top:35%;
-        padding: 0;
-       
-    }   
+    .form{
+        width: 100%;
+        height:auto;
+        
+       }
+       .in-form{
+         height: 1000px;
+         flex-direction:column;
+         margin-top: 10%;
+         padding-bottom: 20%;
+    
+       }
+       .main{
+        width:100%;
+      
+        
+        }
+       .tag{
+        flex-direction: column;
+        justify-content: space-evenly;
+        height: 400px;
+   
+       }
+       .side-border{
+        width:200px;
+        height:1.5px;
+    
+    }
+    .main-form{
+   flex-direction: column;
+    }
 
 
-  .menu-toggle {
-    display: block;
-    position:absolute;
-    top:28px;
-    right: 0px;
-    left:130px;
-    z-index: 1000;
-    background: none;
-    color: white;
-    border: none;
-    font-size: 28px;
-    cursor: pointer;
-    margin: 0;
+    
+    .min-up{
+        width: 95%;
+    }
+    .log{
+
+        width: 25%;
+        
+    }
+    .pol{
+        width: 25%;
+
+    }
+    .cen p{
+     
+        padding:0%;
+    }
+    .soc{
+        width: 25%;
+    }
+    .dow{
+        width: 25%;
+    }
+
 }
 
+@media(max-width:912px){
+    .menu-toggle {
+        display: block;
+    position:absolute;
+    font-weight: 300;
+    left:70%;
+    top: -10px;
+    }
+}
+
+@media(max-width:820px){
+    .menu-toggle {
+        display: block;
+    position:absolute;
+    font-weight: 300;
+    left:70%;
+    top: -5px;
+    }
+}
+
+
+
+@media (max-width: 768px) {
+    .menu-toggle {
+        display: block;
+    position:absolute;
+    font-weight: 300;
+    left:70%;
+    top: 0px;
+    }
+    .logo{
+        position:absolute;
+        top:20px;
+    }
+
     #side-logo {
-        display: none;   
+        display: none;
      }
+    
+    .nav-links.active {
+        display: flex;
+       margin-top:20%;  
+    }
+    .nav-links {
+        display: none;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        height: 300px;
+        background:black;
+        padding: 0%;
+        margin-top: 10%;
+        
+    }
+ 
+    .nav-links li a{
+        width:100%;
+        height: 50px;
+        color:white;
+
+    }
+
+     .form{
+        width: 100%;
+        height:auto;
+        
+       }
+       .in-form{
+         height: 1000px;
+         flex-direction:column;
+         margin-top: 10%;
+         padding-bottom: 20%;
+    
+       }
+       .main{
+        width:100%;
+      
+        
+        }
+       .tag{
+        flex-direction: column;
+        justify-content: space-evenly;
+        height: 400px;
+   
+       }
+       .side-border{
+        width:200px;
+        height:1.5px;
+    
+    }
+    .main-form{
+   flex-direction: column;
+    }
+   
+    footer{
+        width: 100%;
+        height:700px;
+   
+      
+    }
+    .up{
+        width: 100%;
+        height: 650px;
+    
+    }
+    .min-up{
+        width: 100%;
+        height: 700px;
+     flex-direction: column;
+     justify-content: center;
+    
+    }
+    .soc{
+    
+        width:100%;
+        height: 150px;
+        padding:9% 0%;
+        padding-left: 23.5%;
+    }
+    .soc-img{
+        display: flex;
+        justify-content:center;
+        gap: 20px;
+    }
+    .log{
+        width:100%;
+        display: flex;
+        justify-content: center;
+    }
+    .cen h3{
+    text-align: center;
+    }
+    .cen p{
+    text-align: center;
+    }
+    .pol{
+    
+        width:100%;
+        height:150px;
+       
+    }
+    .dow{
+    width: 100%;
+    padding-left: 23.5%;
+      
+    }
+    .soc-img1{
+        display: flex;
+        justify-content:center;
+        gap: 20px;
+    }
+}
+
+
+@media (max-width:400px) {
+
+    .menu-toggle {
+        display: block;
+    position:absolute;
+    left:65%;
+    top: 15px;
+    }
+    .logo{
+        position:absolute;
+        top:20px;
+    }
+
+    #side-logo {
+        display: none;
+     }
+    
+    .nav-links.active {
+        display: flex;
+       margin-top:20%;  
+    }
+    .nav-links {
+        display: none;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        height: 300px;
+        background:black;
+        padding: 0%;
+        margin-top: 10%;
+        
+    }
+ 
+    .nav-links li a{
+        width:100%;
+        height: 50px;
+        color:white;
+
+    }
 
     .form{
      width: 100%;
