--- a/privacy.css
+++ b/privacy.css
@@ -323,20 +323,134 @@ line-height: 18px;
 
 /* Media query for mobile devices */
 @media (max-width: 768px) {
+    .menu-toggle {
+        display: block;
+    position:absolute;
+    left:77%;
+    top: 30px;
+    }
+    .logo{
+        position:absolute;
+        top:20px;
+    }
+
+    #side-logo {
+        display: none;
+     }
+    
+    .nav-links.active {
+        display: flex;
+       margin-top:20%;  
+    }
     .nav-links {
         display: none;
         flex-direction: column;
+        align-items: center;
+        justify-content: center;
         width: 100%;
-        background-color: #333;
+        height: 300px;
+        background:black;
+        padding: 0%;
+        margin-top: 10%;
+        
+    }
+ 
+    .nav-links li a{
+        width:100%;
+        height: 50px;
+        color:white;
+
     }
 
-    .nav-links.active {
+
+    .group-strait{
+        width: 100%;
+        height:auto;
+        padding: 0% 8%; 
+    
+    }
+    .group-strait h2{
+         font-size: 24px;
+         text-align: center;
+           }
+           .group-strait h2 span{
+             font-size: 24px; 
+           }
+           .group-strait img{
+            width:100px;
+           }
+
+           main {
+            padding:3% 10%;
+            width: 100%;
+            height: auto;
+            margin: 0 auto;
+            background-color:black;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+          }
+    
+    
+    footer{
+        width: 100%;
+        height:700px;
+       margin-top: 0%;
+      
+    }
+    .up{
+        width: 100%;
+        height: 650px;
+    
+    }
+    .min-up{
+        width: 100%;
+        height: 700px;
+     flex-direction: column;
+     justify-content: center;
+    
+    }
+    .soc{
+    
+        width:100%;
+        height: 150px;
+        padding:9% 0%;
+        padding-left: 23.5%;
+    }
+    .soc-img{
         display: flex;
+        justify-content:center;
+        gap: 20px;
+    }
+    .log{
+        width:100%;
+        display: flex;
+        justify-content: center;
+    }
+    .cen h3{
+    text-align: center;
+    }
+    .cen p{
+    text-align: center;
+    }
+    .cen p a{
+        color: #FFF;
+    }
+    .pol{
+    
+        width:100%;
+        height:150px;
+       
+    }
+    .dow{
+    width: 100%;
+    padding-left: 23.5%;
+      
+    }
+    .soc-img1{
+        display: flex;
+        justify-content:center;
+        gap: 20px;
     }
 
-    .menu-toggle {
-        display: block;
-    }
 }
 
 
