--- a/service.css
+++ b/service.css
@@ -416,8 +416,12 @@ font-style: normal;
 font-weight: 400;
 line-height: 22px; /* 137.5% */
    }
+   
 
 /* sabse last kard he  */
+#mb-card{
+    margin-top: -5%;
+}
   #m-c-m{
         margin-top: 10%;
         height: 150px;
@@ -717,24 +721,773 @@ line-height: 18px;
   
 }
 
+@media(max-width:1300px){
+
+    .menu-toggle {
+        display: block;
+    position:absolute;
+    left:88%;
+    top: 30px;
+    }
+    .logo{
+        position:absolute;
+        top:20px;
+    }
+
+    #side-logo {
+        display: none;
+     }
+    
+    .nav-links.active {
+        display: flex;
+       margin-top:20%;  
+    }
+    .nav-links {
+        display: none;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        height: 300px;
+        background:black;
+        padding: 0%;
+        margin-top: 10%;
+        
+    }
+ 
+    .nav-links li a{
+        width:100%;
+        height: 50px;
+        color:white;
+
+    }
+
+
+
+    .hero-image{
+        width: 100%;
+        height:400px;
+
+    }
+   
+    .img-text {
+        width: 100%;
+        height: 400px;
+        display: flex;
+        justify-content: center;
+        align-items:end;
+        padding: 0% 8%;
+    }
+    .img-text img {
+        width: 20px;
+        height: 20px;
+    margin-bottom:25%;
+       
+    }  
+     #margon{
+   margin-bottom: 3%;
+
+       
+    }
+    #margon-2{
+        margin-bottom: 3%;
+        
+    }
+    
+    .img-text p {
+    font-size:14px;     
+    }
+    .gallery{
+        width: 100%;
+        height: 1000px;
+        
+        
+    }
+    .g1{
+        width: 100%;
+        height:1000px;
+        flex-direction: column;
+        padding: 4% 8%;
+     
+    }
+    .g1-1{
+        width:100%;
+        height: 400px;  
+    }
+    .g1-img{
+        width:100%;
+        height: 400px;
+    }
+    .g1-2{
+        width: 100%;
+        height:550px;
+        padding-top: 3%;
+        
+    }
+    .gallery2{
+        width: 100%;
+        height: auto;
+        
+       
+        
+    }
+    .gallery2 h1{
+        width: 100%;
+       height: auto;
+       padding: 0% 8%;
+    }
+    .gallery2 p{
+     padding: 0% 8%; 
+   }
+   .group-strait{
+    width: 100%;
+    height:auto;
+    padding: 0% 8%; 
+
+}
+.group-strait h2{
+     font-size: 20px;
+     text-align: center;
+       }
+       .group-strait h2 span{
+         font-size: 20px; 
+       }
+       .group-strait img{
+        width:100px;
+       }
+
+
+       .one-big{
+        height: 500px;
+       }
+
+       .one-small{
+        height:500px;      
+       }
+       .two-small{
+        height:500px;   
+       }
+       .both{
+        width: 85%;
+       height: auto;
+       
+       }
+       .box1{
+        width: 100%;
+        height: 250px;
+     
+    
+       }
+       .box4{
+        width: 100%;
+        height: 250px;
+        padding-top: 20%;
+        
+       }
+       .min-card{
+    width:100%;
+     height:250px;
+   margin-top: -52.5px;
+    
+    
+       }
+       .min-card h1{
+        font-size:20px;
+        line-height:25px;
+       }
+       .min-card p{
+        font-size: 12px;
+        line-height:20px;
+       }
+       .m-card{
+        width:100%;
+        height:250px;
+        margin-left:0%;
+        margin-top: -75px;
+       }
+       .m-card h1{
+
+    font-size:20px;
+
+       }
+       .m-card p{
+    font-size: 12px;
+       }
+       #m-c-m h1{
+  
+    line-height: 20px; /* 116.667% */
+       }
+       #m-c-m p{
+
+    line-height:18px; /* 137.5% */
+       }
+
+       #m-c-m{
+        width: 100%;
+        height: 250px;
+        margin-top:5%;
+        
+       }
+       #m-c-p h1{
+  
+        line-height: 20px; /* 116.667% */
+           }
+           #m-c-p p{
+    
+        line-height:18px; /* 137.5% */
+           }
+       #m-c-p{
+        margin-top:-15%;
+       }
+       #m-c-d h1{
+  
+        line-height: 20px; /* 116.667% */
+           }
+           #m-c-d p{
+    
+        line-height:18px; /* 137.5% */
+           }
+       #m-c-d{
+        margin-top:10%;
+       }
+       #mb-card{
+        margin-top: -17.5%;
+    }
+
+       .box-1{
+        width: 100%;
+        height:250px;
+        
+ 
+       }
+       .box-2{
+        width: 100%;
+        height: 250px;
+        
+       } 
+       
+       .box2{
+        width: 100%;
+        height:250px;
+ 
+       }
+       .box3{
+        width: 100%;
+        height: 250px;
+       } 
+       
+       .box-3{
+        width: 100%;
+        height:250px;
+ 
+       }
+       .box-4{
+        width: 100%;
+        height: 250px;
+       } 
+       
+       .box-5{
+        width: 100%;
+        height:250px;
+ 
+       }
+       .box-6{
+        width: 100%;
+        height: 250px;
+       } 
+      
+       .box-7{
+        width: 100%;
+        height:250px;
+ 
+       }
+       .box-8{
+        width: 100%;
+        height: 250px;
+       } 
+       
+       .box-9{
+        width: 100%;
+        height:250px;
+ 
+       }
+       .box-10{
+        width: 100%;
+        height: 250px;
+       } 
+       
+       .box-11{
+        width: 100%;
+        height:250px;
+ 
+       }
+       .box-12{
+        width: 100%;
+        height: 250px;
+       } 
+       
+       .box-13{
+        width: 100%;
+        height:250px;
+ 
+       }
+       .box-14{
+        width: 100%;
+        height: 250px;
+       } 
+       
+       .box-15{
+        width: 100%;
+        height:250px;
+ 
+       }
+       .box-16{
+        width: 100%;
+        height: 250px;
+       } 
+       
+       .box-17{
+        width: 100%;
+        height:250px;
+       }
+       .box-18{
+        width: 100%;
+        height: 250px;
+        margin-top:15%;
+       } 
+       
+       .box-20{
+        width: 100%;
+        height:250px;
+        margin-top:20%;
+       }
+
+
+
+
+    .min-up{
+        width: 95%;
+    }
+    .log{
+
+        width: 25%;
+        
+    }
+    .pol{
+        width: 25%;
+
+    }
+    .cen p{
+     
+        padding:0%;
+    }
+    .soc{
+        width: 25%;
+    }
+    .dow{
+        width: 25%;
+    }
+}
+
+
+
 
 
 
 /* Media query for mobile devices */
 @media (max-width: 768px) {
+    .menu-toggle {
+        display: block;
+    position:absolute;
+    left:88%;
+    top: 30px;
+    }
+    .logo{
+        position:absolute;
+        top:20px;
+    }
+
+    #side-logo {
+        display: none;
+     }
+    
+    .nav-links.active {
+        display: flex;
+       margin-top:20%;  
+    }
     .nav-links {
         display: none;
         flex-direction: column;
+        align-items: center;
+        justify-content: center;
         width: 100%;
-        background-color: #333;
+        height: 300px;
+        background:black;
+        padding: 0%;
+        margin-top: 10%;
+        
     }
+ 
+    .nav-links li a{
+        width:100%;
+        height: 50px;
+        color:white;
 
-    .nav-links.active {
+    }
+    
+    .hero-image{
+        width: 100%;
+        height:400px;
+
+    }
+   
+    .img-text {
+        width: 100%;
+        height: 400px;
         display: flex;
+        justify-content: center;
+        align-items:end;
+        padding: 0% 8%;
+    }
+    .img-text img {
+        width: 20px;
+        height: 20px;
+    margin-bottom:25%;
+       
+    }  
+     #margon{
+   margin-bottom: 5%;
+   margin-right: 3%;
+       
+    }
+    #margon-2{
+        margin-bottom: 8%;
+        
+    }
+    
+    .img-text p {
+    font-size:20px;     
+    }
+    .gallery{
+        width: 100%;
+        height: 1000px;
+       
+        
+    }
+    .g1{
+        width: 100%;
+        height:1000px;
+        flex-direction: column;
+        padding: 4% 8%;
+     
+    }
+    .g1-1{
+        width:100%;
+        height: 400px;  
+    }
+    .g1-img{
+        width:100%;
+        height: 400px;
+    }
+    .g1-2{
+        width: 100%;
+        height:550px;
+        padding-top: 3%;
+        
+    }
+    .gallery2{
+        width: 100%;
+        height: auto;
+        
+       
+        
+    }
+    .gallery2 h1{
+        width: 100%;
+       height: auto;
+       padding: 0% 8%;
+    }
+    .gallery2 p{
+     padding: 0% 8%; 
+   }
+   .group-strait{
+    width: 100%;
+    height:auto;
+    padding: 0% 8%; 
+
+}
+.group-strait h2{
+     font-size: 20px;
+     text-align: center;
+       }
+       .group-strait h2 span{
+         font-size: 20px; 
+       }
+       .group-strait img{
+        width:100px;
+       }
+
+
+       .one-big{
+        height: 500px;
+       }
+
+       .one-small{
+        height:500px;      
+       }
+       .two-small{
+        height:500px;   
+       }
+       .both{
+        width: 85%;
+       height: auto;
+       
+       }
+       .box1{
+        width: 100%;
+        height: 250px;
+     
+    
+       }
+       .box4{
+        width: 100%;
+        height: 250px;
+        padding-top: 20%;
+        
+       }
+       .min-card{
+    width:100%;
+     height:250px;
+    margin-top: -39px;
+    
+       }
+       .min-card h1{
+        font-size:20px;
+        line-height:25px;
+       }
+       .min-card p{
+        font-size: 12px;
+        line-height:20px ;
+       }
+       .m-card{
+        width:100%;
+        height:250px;
+        margin-left:0%;
+        margin-top: -55px;
+       }
+       .m-card h1{
+
+    font-size:20px;
+
+       }
+       .m-card p{
+    font-size: 12px;
+       }
+       #m-c-m h1{
+  
+    line-height: 20px; /* 116.667% */
+       }
+       #m-c-m p{
+
+    line-height:18px; /* 137.5% */
+       }
+
+       #m-c-m{
+        width: 100%;
+        height: 250px;
+        margin-top:5%;
+        
+       }
+       #m-c-p h1{
+  
+        line-height: 20px; /* 116.667% */
+           }
+           #m-c-p p{
+    
+        line-height:18px; /* 137.5% */
+           }
+       #m-c-p{
+        margin-top:-15%;
+       }
+       #m-c-d h1{
+  
+        line-height: 20px; /* 116.667% */
+           }
+           #m-c-d p{
+    
+        line-height:18px; /* 137.5% */
+           }
+       #m-c-d{
+        margin-top:10%;
+       }
+       #mb-card{
+        margin-top: -17.5%;
     }
 
-    .menu-toggle {
-        display: block;
+       .box-1{
+        width: 100%;
+        height:250px;
+ 
+       }
+       .box-2{
+        width: 100%;
+        height: 250px;
+       } 
+       
+       .box2{
+        width: 100%;
+        height:250px;
+ 
+       }
+       .box3{
+        width: 100%;
+        height: 250px;
+       } 
+       
+       .box-3{
+        width: 100%;
+        height:250px;
+ 
+       }
+       .box-4{
+        width: 100%;
+        height: 250px;
+       } 
+       
+       .box-5{
+        width: 100%;
+        height:250px;
+ 
+       }
+       .box-6{
+        width: 100%;
+        height: 250px;
+       } 
+      
+       .box-7{
+        width: 100%;
+        height:250px;
+ 
+       }
+       .box-8{
+        width: 100%;
+        height: 250px;
+       } 
+       
+       .box-9{
+        width: 100%;
+        height:250px;
+ 
+       }
+       .box-10{
+        width: 100%;
+        height: 250px;
+       } 
+       
+       .box-11{
+        width: 100%;
+        height:250px;
+ 
+       }
+       .box-12{
+        width: 100%;
+        height: 250px;
+       } 
+       
+       .box-13{
+        width: 100%;
+        height:250px;
+ 
+       }
+       .box-14{
+        width: 100%;
+        height: 250px;
+       } 
+       
+       .box-15{
+        width: 100%;
+        height:250px;
+ 
+       }
+       .box-16{
+        width: 100%;
+        height: 250px;
+       } 
+       
+       .box-17{
+        width: 100%;
+        height:250px;
+       }
+       .box-18{
+        width: 100%;
+        height: 250px;
+        margin-top:15%;
+       } 
+       
+       .box-20{
+        width: 100%;
+        height:250px;
+        margin-top:20%;
+       }
+       footer{
+        width: 100%;
+        height:700px;
+       margin-top: -10%;
+      
+    }
+    .up{
+        width: 100%;
+        height: 650px;
+    
+    }
+    .min-up{
+        width: 100%;
+        height: 700px;
+     flex-direction: column;
+     justify-content: center;
+    
+    }
+    .soc{
+    
+        width:100%;
+        height: 150px;
+        padding:9% 0%;
+        padding-left: 23.5%;
+    }
+    .soc-img{
+        display: flex;
+        justify-content:center;
+        gap: 20px;
+    }
+    .log{
+        width:100%;
+        display: flex;
+        justify-content: center;
+    }
+    .cen h3{
+    text-align: center;
+    }
+    .cen p{
+    text-align: center;
+    }
+    .cen p a{
+        color: #FFF;
+    }
+    .pol{
+    
+        width:100%;
+        height:150px;
+       
+    }
+    .dow{
+    width: 100%;
+    padding-left: 23.5%;
+      
+    }
+    .soc-img1{
+        display: flex;
+        justify-content:center;
+        gap: 20px;
     }
 }
 
