--- a/terms.css
+++ b/terms.css
@@ -337,44 +337,127 @@ line-height: 18px;
 
 
 @media (max-width: 768px) {
-    .nav-links {
-        
+    .menu-toggle {
+        display: block;
+    position:absolute;
+    left:77%;
+    top: 30px;
+    }
+    .logo{
+        position:absolute;
+        top:20px;
+    }
+
+    #side-logo {
         display: none;
-        flex-direction: column;
+     }
+    
+    .nav-links.active {
+        display: flex;
+       margin-top:20%;  
+    }
+    .nav-links {
         display: none;
         flex-direction: column;
         align-items: center;
-        justify-content:space-evenly;
+        justify-content: center;
         width: 100%;
-        background:maroon;
-        top: 100px; /* Prevent shifting */
-        left: 0;
-        z-index: 999;
+        height: 300px;
+        background:black;
+        padding: 0%;
+        margin-top: 10%;
+        
+    }
+ 
+    .nav-links li a{
+        width:100%;
+        height: 50px;
+        color:white;
 
     }
 
-    .nav-links.active {
+     .group-strait{
+        width: 100%;
+        height:auto;
+        padding: 0% 8%; 
+    
+    }
+    .group-strait h2{
+         font-size: 24px;
+         text-align: center;
+           }
+           .group-strait h2 span{
+             font-size: 24px; 
+           }
+           .group-strait img{
+            width:100px;
+           }
+
+     main {
+    
+        padding:0% 10%;
+        
+      }
+     footer{
+        width: 100%;
+        height:700px;
+       margin-top: 10%;
+      
+    }
+    .up{
+        width: 100%;
+        height: 650px;
+    
+    }
+    .min-up{
+        width: 100%;
+        height: 700px;
+     flex-direction: column;
+     justify-content: center;
+    
+    }
+    .soc{
+    
+        width:100%;
+        height: 150px;
+        padding:9% 0%;
+        padding-left: 23.5%;
+    }
+    .soc-img{
         display: flex;
+        justify-content:center;
+        gap: 20px;
+    }
+    .log{
+        width:100%;
+        display: flex;
+        justify-content: center;
+    }
+    .cen h3{
+    text-align: center;
+    }
+    .cen p{
+    text-align: center;
+    }
+    .cen p a{
+        color: #FFF;
+    }
+    .pol{
+    
+        width:100%;
+        height:150px;
        
-    }   
-
-  .menu-toggle {
-    display: block;
-   position: relative;
-    top: 20px;
-    right: 20px;
-    z-index: 1000;
-    background: none;
-    color: white;
-    border: none;
-    font-size: 28px;
-    cursor: pointer;
-   margin: 0;
-}
-
-    #side-logo {
-        display: none;   
-     }
+    }
+    .dow{
+    width: 100%;
+    padding-left: 23.5%;
+      
+    }
+    .soc-img1{
+        display: flex;
+        justify-content:center;
+        gap: 20px;
+    }
 }
 
 
@@ -419,6 +502,8 @@ line-height: 18px;
     #side-logo {
        display: none;
     }
+
+    
 
     .group-strait{
         width: 100%;
