--- a/community.css
+++ b/community.css
@@ -908,21 +908,20 @@ text-align: center;
 
         footer{
             width: 100%;
-            height:550px;
-        
-          
-        }
+            height:700px;
+            margin-top: -40%;
+           }
         .up{
             width: 100%;
-            height:550px;
+            height:650px;
         
         }
         .min-up{
             width: 100%;
-            height:550px;
+            height:700px;
          flex-direction: column;
          justify-content: center;
-         padding-top: 70%;
+        padding-top: 80%;
         
         }
         #fl-ex{
