--- a/about.css
+++ b/about.css
@@ -1138,10 +1138,96 @@ text-align: center;
         }
           
 }
-
+@media(max-width:700px){
+    footer{
+        width: 100%;
+        height:700px;
+    margin-top: -30%;
+      
+    }
+    .up{
+        width: 100%;
+        height: 650px;
+    
+    }
+    .min-up{
+        width: 100%;
+        height: 700px;
+     flex-direction: column;
+     justify-content: center;
+     padding-top: 40%;
+    
+    }
+    .cen{
+        margin-top:-5%;
+    }
+    #fl-ex{
+        width: 100%;
+        justify-content: center;
+        padding: 10%;
+    }
+    .soc{
+    
+        width:50%;
+        height:auto;
+        padding-left:25%;
+        
+    }
+    .soc-img{
+        display: flex;
+        justify-content:start;
+        gap: 20px;
+    }
+    .log{
+        width:100%;
+        height: auto;
+        display: flex;
+        justify-content: center;
+    }
+    .cen h3{
+    text-align:start !important;
+    font-size: 3vw !important;
+    }
+    .cen p{
+    text-align:start !important;
+    font-size: 2.5vw !important;
+    padding: 0%;
+    }
+    .pol{
+    
+        width:50%;
+        height:auto;
+      
+       
+    }
+    .dow{
+    width: 100%;
+    height:auto;
+  
+      
+    }
+    .soc-img1{
+       
+    
+        display: flex;
+        justify-content:start;
+        gap: 20px;
+    }
+    .soc-img1 img{
+        width: 23px;
+        height: 23px;
+    }
+    .soc-img img{
+        width: 20px;
+        height: 20px;
+    }
+}
 @media(max-width:645px){
     .m-card{
       padding-top: 50%;
+    }
+    .cen{
+        margin-top: -7% !important;
     }
 }
 @media(max-width:620px){
@@ -1154,6 +1240,7 @@ text-align: center;
    margin-bottom:5%;
        
     }  
+
 }
 @media(max-width:650px){
     .m-card{
@@ -1163,7 +1250,7 @@ text-align: center;
     footer{
         width: 100%;
         height:700px;
-        margin-top:0%;
+    margin-top: -20%;
       
     }
     .up{
@@ -1173,9 +1260,10 @@ text-align: center;
     }
     .min-up{
         width: 100%;
-        height: 650px;
+        height: 700px;
      flex-direction: column;
      justify-content: center;
+     padding-top: 40%;
     
     }
     #fl-ex{
@@ -1256,7 +1344,7 @@ text-align: center;
 
     .cen h3{
         text-align:start;
-        font-size: 3vw;
+        font-size: 3vw !important;
         }
         .cen p{
             font-size: 2.5vw !important;
@@ -1291,6 +1379,51 @@ text-align: center;
         gap: 20px;
        
     } 
+    .cen{
+        margin-top: -10% !important;
+    }
+}
+@media(max-width:528px){
+    .dow{
+        width: 100%;
+      
+        }
+        .soc-img1{
+            width:100px;
+            display: flex;
+            justify-content:start !important;
+        }
+  
+    .soc-img{
+        display: flex;
+        justify-content:start;
+        gap: 10px;
+      
+    }
+    .soc-img img{
+        width: 20px;
+        height: 20px;
+    }
+
+    .cen h3{
+        text-align:start;
+        font-size: 4vw !important;
+        }
+        .cen p{
+            font-size: 3vw !important;
+        }
+
+    .soc-img1{
+        display: flex;
+        justify-content:center;
+        gap: 20px;
+        width: 100px;
+    }
+    .soc-img1 img{
+        width: 20px;
+        height: 20px;
+    }
+
 }
 @media(max-width:500px){
     .m-card{
@@ -1301,6 +1434,28 @@ text-align: center;
         justify-content:start !important;
         gap: 20px;
         
+    }
+    .cen{
+        margin-top: -11% !important;
+    }
+    .min-up{
+        width: 100%;
+        height: 700px;
+     flex-direction: column;
+     justify-content: center;
+     padding-top: 60% !important;
+    
+    }
+    footer{
+        width: 100%;
+        height:700px;
+    margin-top: -40%;
+      
+    }
+}
+@media(max-width:450px){
+    .cen{
+        margin-top: -15% !important;
     }
 }
 @media(max-width:430px){
@@ -1320,7 +1475,7 @@ text-align: center;
         
     }
     .cen{
-        margin-top:-10%;
+        margin-top:-18% !important;
     }
     .pol{
         padding-top:2%;
@@ -1570,7 +1725,7 @@ text-align: center;
         }
         .cen h3{
         text-align:start;
-        font-size: 4.5vw;
+        font-size: 4.5vw !important;
         }
         .cen p{
             font-size:4vw !important;
@@ -1584,7 +1739,7 @@ text-align: center;
         
         .cen{
             width:39%;
-            margin-top: -10%;
+            margin-top: -10% !important;
         }
         .pol .cen{
             width: 100%;
