--- a/contact.css
+++ b/contact.css
@@ -767,6 +767,25 @@ text-align: center;
 
 
 @media(max-width:700px){
+    footer{
+        width: 100%;
+        height:700px;
+    margin-top: -20%;
+      
+    }
+    .up{
+        width: 100%;
+        height: 650px;
+    
+    }
+    .min-up{
+        width: 100%;
+        height: 700px;
+     flex-direction: column;
+     justify-content: center;
+     padding-top: 40%;
+    
+    }
 
 
          .dow{
@@ -809,7 +828,7 @@ text-align: center;
             height: 23px;
         }
         .cen{
-            margin-top: -2%;
+            margin-top: -5%;
         }
    
 }
@@ -820,6 +839,7 @@ text-align: center;
         gap: 20px;
         width: 120px;
     }
+  
 }
 
 @media (max-width:600px){
@@ -830,7 +850,9 @@ text-align: center;
     left:65%;
     top: 10px;
     }
-
+    .cen{
+        margin-top: -8%;
+    }
 
 }
 
@@ -843,7 +865,67 @@ text-align: center;
     }
 }
 
+@media(max-width:528px){
+    .dow{
+        width: 100%;
+      
+        }
+        .soc-img1{
+            width:100px;
+            display: flex;
+            justify-content:start !important;
+        }
+  
+    .soc-img{
+        display: flex;
+        justify-content:start;
+        gap: 10px;
+      
+    }
+    .soc-img img{
+        width: 20px;
+        height: 20px;
+    }
 
+    .cen h3{
+        text-align:start;
+        font-size: 4vw;
+        }
+        .cen p{
+            font-size: 3vw !important;
+        }
+
+    .soc-img1{
+        display: flex;
+        justify-content:center;
+        gap: 20px;
+        width: 100px;
+    }
+    .soc-img1 img{
+        width: 20px;
+        height: 20px;
+    }
+    .cen{
+        margin-top: -10%;
+    }
+}
+@media(max-width:500px){
+    
+    footer{
+        width: 100%;
+        height:700px;
+    margin-top: -40%;
+      
+    }
+    .min-up{
+        width: 100%;
+        height: 700px;
+     flex-direction: column;
+     justify-content: center;
+     padding-top: 60% !important;
+    
+    }
+}
 @media(max-width:450px){
     .soc-img1{
         display: flex;
@@ -857,8 +939,16 @@ text-align: center;
     .pol{
         padding-top:2%;
     }
+    .cen{
+        margin-top: -12%;
+    }
 }
 
+@media(max-width:420px){
+    .cen{
+        margin-top:-15%;
+    }
+}
 
 @media (max-width:400px) {
     #menu-Toggle{
