--- a/service.css
+++ b/service.css
@@ -1584,6 +1584,90 @@ text-align: center;
         gap: 20px;
     }
 }
+@media(max-width:700px){
+    footer{
+        width: 100%;
+        height:700px;
+    margin-top: -30%;
+      
+    }
+    .up{
+        width: 100%;
+        height: 650px;
+    
+    }
+    .min-up{
+        width: 100%;
+        height: 700px;
+     flex-direction: column;
+     justify-content: center;
+     padding-top: 40%;
+    
+    }
+    .cen{
+        margin-top:-5%;
+    }
+    #fl-ex{
+        width: 100%;
+        justify-content: center;
+        padding: 10%;
+    }
+    .soc{
+    
+        width:50%;
+        height:auto;
+        padding-left:25%;
+        
+    }
+    .soc-img{
+        display: flex;
+        justify-content:start;
+        gap: 20px;
+    }
+    .log{
+        width:100%;
+        height: auto;
+        display: flex;
+        justify-content: center;
+    }
+    .cen h3{
+    text-align:start !important;
+    font-size: 3vw !important;
+    }
+    .cen p{
+    text-align:start !important;
+    font-size: 2.5vw !important;
+    padding: 0%;
+    }
+    .pol{
+    
+        width:50%;
+        height:auto;
+      
+       
+    }
+    .dow{
+    width: 100%;
+    height:auto;
+  
+      
+    }
+    .soc-img1{
+       
+    
+        display: flex;
+        justify-content:start;
+        gap: 20px;
+    }
+    .soc-img1 img{
+        width: 23px;
+        height: 23px;
+    }
+    .soc-img img{
+        width: 20px;
+        height: 20px;
+    }
+}
 
 @media(max-width:650px){
 
@@ -1667,7 +1751,7 @@ text-align: center;
         height: 20px;
     }
     .cen{
-        margin-top:-6%;
+        margin-top:-7%;
     }
 
 }
@@ -1700,6 +1784,9 @@ text-align: center;
                  margin-bottom:11%;
                  margin-left: 5%;
              }  
+             .cen{
+                margin-top:-8%;
+            }
  
 }
 
@@ -1725,7 +1812,51 @@ text-align: center;
                  margin-bottom:17%;
                  margin-left: 5%;
              } 
+             .cen{
+                margin-top:-10%;
+            }
  
+}
+@media(max-width:528px){
+    .dow{
+        width: 100%;
+      
+        }
+        .soc-img1{
+            width:100px;
+            display: flex;
+            justify-content:start !important;
+        }
+  
+    .soc-img{
+        display: flex;
+        justify-content:start;
+        gap: 10px;
+      
+    }
+    .soc-img img{
+        width: 20px;
+        height: 20px;
+    }
+
+    .cen h3{
+        text-align:start;
+        font-size: 4vw !important;
+        }
+        .cen p{
+            font-size: 3vw !important;
+        }
+
+    .soc-img1{
+        display: flex;
+        justify-content:center;
+        gap: 20px;
+        width: 100px;
+    }
+    .soc-img1 img{
+        width: 20px;
+        height: 20px;
+    }
 }
 @media(max-width:500px){
     .img-text p {
@@ -1739,6 +1870,23 @@ text-align: center;
             justify-content:start;
             gap: 20px;
         }
+        .cen{
+            margin-top:-12%;
+        }
+        footer{
+            width: 100%;
+            height:700px;
+        margin-top: -40%;
+          
+        }
+        .min-up{
+            width: 100%;
+            height: 700px;
+         flex-direction: column;
+         justify-content: center;
+         padding-top: 60% !important;
+        
+        }
 }
 @media(max-width:450px){
     .soc-img1{
@@ -1749,13 +1897,18 @@ text-align: center;
         gap: 20px;
     }
     .cen{
-        margin-top:-10%;
+        margin-top:-15%;
     }
     .pol{
         padding-top:2%;
     }
 }
 
+@media(max-width:420px){
+    .cen{
+        margin-top:-16%;
+    }
+}
 
 @media (max-width:400px) {
 
