--- a/terms.css
+++ b/terms.css
@@ -176,11 +176,13 @@ body {
     
     text-decoration: none;
     color:maroon;
+
   }
-  a:hover {
-   
-    color: #007BFF;
+  main p a{
+    position: absolute;
+    z-index: 5;
   }
+
  main ul {
     padding-left: 20px;
 
@@ -666,8 +668,27 @@ text-align: center;
         width: 23px;
         height: 23px;
     }
+    footer{
+        width: 100%;
+        height:700px;
+    margin-top: -20%;
+      
+    }
+    .up{
+        width: 100%;
+        height: 650px;
+    
+    }
+    .min-up{
+        width: 100%;
+        height: 700px;
+     flex-direction: column;
+     justify-content: center;
+     padding-top: 40%;
+    
+    }
     .cen{
-        margin-top: -2%;
+        margin-top: -5%;
     }
 }
 
@@ -678,6 +699,9 @@ text-align: center;
         gap: 20px;
      
     }
+    .cen{
+        margin-top: -7%;
+    }
 }
 
 @media(max-width:550px){
@@ -686,6 +710,68 @@ text-align: center;
         justify-content:start !important;
         gap: 20px;
       
+    }
+    .cen{
+        margin-top: -9%;
+    }
+}
+
+@media(max-width:528px){
+    .dow{
+        width: 100%;
+      
+        }
+        .soc-img1{
+            width:100px;
+            display: flex;
+            justify-content:start !important;
+        }
+  
+    .soc-img{
+        display: flex;
+        justify-content:start;
+        gap: 10px;
+      
+    }
+    .soc-img img{
+        width: 20px;
+        height: 20px;
+    }
+
+    .cen h3{
+        text-align:start;
+        font-size: 4vw;
+        }
+        .cen p{
+            font-size: 3vw !important;
+        }
+
+    .soc-img1{
+        display: flex;
+        justify-content:center;
+        gap: 20px;
+        width: 100px;
+    }
+    .soc-img1 img{
+        width: 20px;
+        height: 20px;
+    }
+}
+@media(max-width:500px){
+    
+    footer{
+        width: 100%;
+        height:700px;
+    margin-top: -40%;
+      
+    }
+    .min-up{
+        width: 100%;
+        height: 700px;
+     flex-direction: column;
+     justify-content: center;
+     padding-top: 60% !important;
+    
     }
 }
 @media(max-width:480px){
@@ -696,10 +782,15 @@ text-align: center;
        
     }
     .cen{
-        margin-top:-10%;
+        margin-top:-12%;
     }
     .pol{
         padding-top:2%;
+    }
+}
+@media(max-width:420px){
+    .cen{
+        margin-top:-15%;
     }
 }
 
